# vorbis-music

./: .gitignore  CMakeLists.txt  README  README.markdown
src/: CMakeLists.txt  MainWidget.cpp  MainWidget.hpp  MainWindow.cpp  MainWindow.hpp  README  main.cpp  playVorbis.cpp  playVorbis.hpp
